# KnotX

./: .gitignore  README.md  package-lock.json
contracts/: .gitignore  README.md
contracts/casper/: Makefile
contracts/casper/contract/: Cargo.toml
contracts/casper/tests/: Cargo.toml
contracts/casper/tests/src/: integration_tests.rs
contracts/casper/tests/wasm/: contract.wasm  receiver.wasm
frontend/: .env.tmp  CASPER_TRANSACTIONS.md  COMPARISON.md  CSPR_CLICK_SDK_README.md  README.md  empty-module.js  middleware.ts  next.config.mjs  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: auth-guard.tsx  bento-section.tsx  campaign-card.tsx  casper-wallet-provider.tsx  casper-wallet-wrapper.tsx  cta-section.tsx  faq-section.tsx  footer-section.tsx  header.tsx  hero-section.tsx  mobile-navbar.tsx  privy-provider.tsx  rainbow-wallet-provider.tsx  sidebar.tsx  top-bar.tsx  universal-counter-display.tsx  universal-counter-swap.tsx  wallet-connection-context.tsx  wallet-providers.tsx
frontend/contexts/: user-context.tsx
frontend/docs/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontend/lib/: casper-rpc-client-rotation.ts  casper-rpc-rotation.ts
frontend/public/: mypink horse.json
frontend/scripts/: dev-with-docs.js
relayer/: ARCHITECTURE.md  README.md  RELAYER_SETUP.md  package-lock.json  package.json
relayer/src/: app.ts  index.ts
relayer/src/db/: index.ts
server/: .env.example  .eslintrc.js  .gitignore  README.md  package.json
server/src/: app.ts
(+119 files in other folders)
