[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
casper-contract = { version = "5.1.1", default-features = false, features = ["test-support"] }
casper-engine-test-support = "8.1.1"
casper-execution-engine = "8.1.1"
casper-types = "6.0.1"
base64ct = "=1.7.2"

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false

